--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
-name: Generate Kodekloud SBOM Report with Syft
+name: Generate SBOM Report with Syft
 
 on:
+  workflow_dispatch: {}
   push:
     branches:
       - master
@@ -22,10 +23,10 @@ jobs:
 
     - name: Generate SBOM
       run: |
-        syft docker.io/kodekloud/webapp-color:latest -o cyclonedx-xml > sbom.xml
+        syft docker.io/kodekloud/webapp-color:latest -o cyclonedx-json > sbom.json
 
     - name: Upload SBOM Artifact
       uses: actions/upload-artifact@v3
       with:
         name: sbom-report
-        path: sbom.xml
+        path: sbom.json
