--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
 
     - name: Generate SBOM
       run: |
-        syft docker.io/kodekloud/webapp-color:latest -o cyclonedx-json > sbom.json
+        syft docker.io/kodekloud/webapp-color:latest -o spdx-json > spdx.json
 
     - name: Upload SBOM Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: sbom-report
-        path: sbom.json
+        name: spdx-report
+        path: spdx.json
